Fixed salmon not being displayed on mobile

--- a/css/mFish.css
+++ b/css/mFish.css
@@ -37,7 +37,7 @@
 #cherry-salmon.fishMobile {background-position: 71.4285714285% 100%;}
 #char.fishMobile {background-position: 42.8571428571% 66.6%;}
 #golden-trout.fishMobile {background-position: 71.4285714285% 22.2%;}
-#stringfish.fishMobile{background-position: 57.1428571428% 33.3%};
+#stringfish.fishMobile{background-position: 57.1428571428% 33.3%}
 #salmon.fishMobile {background-position: 71.4285714285% 77.7%;}
 #king-salmon.fishMobile {background-position: 28.5714285714% 44.4%;}
 #mitten-crab.fishMobile {background-position: 57.1428571428% 88.8%;}
